--- a/style_detail.css
+++ b/style_detail.css
@@ -110,6 +110,10 @@ header {
   transition: background-color 0.3s ease;
   border: 1px solid black;
 }
+.btn-back:hover {
+  background-color: white;
+  color: black;
+}
 
 footer {
   background-color: #212529;
